--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 25.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 25.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>TikTok Parody Cringe</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The Secret to the Golf Swing - It Feels Nothing Like You'd Expect</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>the toughest watch of my youtube career..</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Can you just flip a coin and make money trading?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The only thing you can truly know for sure</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -409,7 +409,7 @@
                     <div class="video-info">
                         <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1212,7 +1212,7 @@
                     <div class="video-info">
                         <h3>This country has abandoned poor people</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 25.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 25.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Can you just flip a coin and make money trading?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5820,7 +5820,7 @@
                         <div class="video-info">
                             <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5996,7 +5996,7 @@
                         <div class="video-info">
                             <h3>This country has abandoned poor people</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>The only thing you can truly know for sure</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>The Secret to the Golf Swing - It Feels Nothing Like You'd Expect</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>TikTok Parody Cringe</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>the toughest watch of my youtube career..</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
