--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Who Let Arthur, Chip & AB Drink Together?🍺😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -508,7 +508,7 @@
                     <div class="video-info">
                         <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1212,7 +1212,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US TRIPLE KILL</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2591,7 +2591,7 @@
                     <div class="video-info">
                         <h3>Classic Roman Porchetta! tender & juicy #italianfood #cooking #recipe</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -8019,7 +8019,7 @@
                         <div class="video-info">
                             <h3>3 Days Alone: Can You Handle Your Mind? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9637,7 +9637,7 @@
                         <div class="video-info">
                             <h3>Classic Roman Porchetta! tender & juicy #italianfood #cooking #recipe</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Who Let Arthur, Chip & AB Drink Together?🍺😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10672,7 +10672,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US TRIPLE KILL</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
