--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The real source of humanity’s troubles</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">55 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 25.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The Secret to the Golf Swing - It Feels Nothing Like You'd Expect</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>the toughest watch of my youtube career..</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Can you just flip a coin and make money trading?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -904,7 +904,7 @@
                     <div class="video-info">
                         <h3>I Finally Passed the5ers Evaluation using THIS Strategy (3 Days)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 25.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Can you just flip a coin and make money trading?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5897,7 +5897,7 @@
                         <div class="video-info">
                             <h3>I Finally Passed the5ers Evaluation using THIS Strategy (3 Days)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>The real source of humanity’s troubles</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">55 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>The Secret to the Golf Swing - It Feels Nothing Like You'd Expect</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>the toughest watch of my youtube career..</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
