--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US BUT HALF THE LOBBY ARE JESTERS</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">51 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -915,7 +915,7 @@
                     <div class="video-info">
                         <h3>Fears to Fathom: Woodbury Getaway</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US BUT HALF THE LOBBY ARE JESTERS</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">51 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10551,7 +10551,7 @@
                         <div class="video-info">
                             <h3>Fears to Fathom: Woodbury Getaway</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
