--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=_wOsoJ_uk2k" target="_blank">
-                    <img src="https://i.ytimg.com/vi/_wOsoJ_uk2k/mqdefault.jpg" alt="TikTok Parody Cringe">
+                    <img src="https://i.ytimg.com/vi/_wOsoJ_uk2k/mqdefault.jpg" alt="Try not to Cringe: TikToks">
                     <div class="video-info">
-                        <h3>TikTok Parody Cringe</h3>
+                        <h3>Try not to Cringe: TikToks</h3>
                         <div class="channel">Arthur Frederick</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -10261,9 +10261,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=_wOsoJ_uk2k" target="_blank">
-                        <img src="https://i.ytimg.com/vi/_wOsoJ_uk2k/mqdefault.jpg" alt="TikTok Parody Cringe">
+                        <img src="https://i.ytimg.com/vi/_wOsoJ_uk2k/mqdefault.jpg" alt="Try not to Cringe: TikToks">
                         <div class="video-info">
-                            <h3>TikTok Parody Cringe</h3>
+                            <h3>Try not to Cringe: TikToks</h3>
                             <div class="channel">Arthur Frederick</div>
                             <div class="date">Yesterday</div>
                         </div>
